--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         <!-- Gallery  -->
         <div class="gallery">
           <article class="from-left">
-            <a href="pdf/Of Universe and Ancestors Print.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
+            <a href="pdf/Of Universe and Ancestors.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
           </article>
           <article class="from-right">
-            <a href="pdf/Of Universe and Ancestors Print.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
+            <a href="pdf/Journey To Goldilocks.pdf" target=”_blank”><img src="images/journey_to_goldilocks.jpg" title="Journey To Goldilocks" alt="" class="thumbnailBook"/></a>
           </article>
           <article class="from-left">
-            <a href="pdf/Of Universe and Ancestors Print.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
+            <a href="pdf/On The Origin of Xe.pdf" target=”_blank”><img src="images/on_the_origin_of_xe.jpg" title="On The Origin of Xe" alt="" class="thumbnailBook"/></a>
           </article>
           <article class="from-right">
-            <a href="pdf/Of Universe and Ancestors Print.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
+            <a href="pdf/Imagine Waking Up.pdf" target=”_blank”><img src="images/imagine_waking_up.jpg" title="Imagine Waking Up" alt="" class="thumbnailBook"/></a>
           </article>
         </div>
       </section>
@@ -102,16 +102,16 @@
 								<a href="music_2015.html"><img src="images/music_2015.jpg" title="Russell 2015" alt="" class="thumbnailMusic"/></a>
 							</article>
 							<article class="from-right">
-								<a href=".pdf" target=”_blank”><img src="images/music_2016.jpg" title="Russell 2016" alt="" class="thumbnailMusic"/></a>
+								<a href="music_2016.html"><img src="images/music_2016.jpg" title="Russell 2016" alt="" class="thumbnailMusic"/></a>
 							</article>
 							<article class="from-left">
-								<a href=".pdf" target=”_blank”><img src="images/music_2018.jpg" title="Russell 2018" alt="" class="thumbnailMusic"/></a>
+								<a href="music_2018.html"><img src="images/music_2018.jpg" title="Russell 2018" alt="" class="thumbnailMusic"/></a>
 							</article>
 							<article class="from-right">
-								<a href=".pdf" target=”_blank”><img src="images/music_2019.jpg" title="Russell 2019" alt="" class="thumbnailMusic"/></a>
+								<a href="music_2019.html"><img src="images/music_2019.jpg" title="Russell 2019" alt="" class="thumbnailMusic"/></a>
 							</article>
 							<article class="from-left">
-								<a href=".pdf" target=”_blank”><img src="images/music_2020.jpg" title="Russell 2020" alt="" class="thumbnailMusic"/></a>
+								<a href="music_2020.html"><img src="images/music_2020.jpg" title="Russell 2020" alt="" class="thumbnailMusic"/></a>
 							</article>
 						</div>
 				</div>
