--- a/music_2020.html
+++ b/music_2020.html
@@ -36,7 +36,7 @@
           <tr>
             <td>You Can Dream</td>
             <td><audio controls>
-                  <source src="music/2020/you can dream.mp3" type="audio/mpeg">
+                  <source src="music/2020/you_can_dream.mp3" type="audio/mpeg">
                   Your browser does not support the audio tag.
                 </audio>
             </td>
@@ -44,7 +44,7 @@
           <tr>
             <td>Movin' On</td>
             <td><audio controls>
-                  <source src="music/2020/movin on.mp3" type="audio/mpeg">
+                  <source src="music/2020/movin_on.mp3" type="audio/mpeg">
                   Your browser does not support the audio tag.
                 </audio>
             </td>
@@ -52,7 +52,7 @@
           <tr>
             <td>Ellie May</td>
             <td><audio controls>
-                  <source src="music/2020/ellie may cello.mp3" type="audio/mpeg">
+                  <source src="music/2020/ellie_may_cello.mp3" type="audio/mpeg">
                   Your browser does not support the audio tag.
                 </audio>
             </td>
@@ -60,7 +60,7 @@
           <tr>
             <td>I'll Find Myself In You</td>
             <td><audio controls>
-                  <source src="music/2020/I'll Find Myself In You.mp3" type="audio/mpeg">
+                  <source src="music/2020/i'll_find_myself_in_you.mp3" type="audio/mpeg">
                   Your browser does not support the audio tag.
                 </audio>
             </td>
