--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Welcome to <strong>Xerellian Press</strong>, presenting the writings and songs of <strong>Russell Sisson</strong><br />
+					released for free under license from Xerellian Press.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -47,9 +47,7 @@
 					<header>
 						<h2>Writing Stories</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i> begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story based on science and science fiction, introducing the character Xe who lives on a planet called Xeron in a far away galaxy. His fourth book, <i>Imagine Waking Up</i> is a compilation of stories based on the music written and performed by Russell Sisson.</p>
 				</div>
 			</section>
       
@@ -79,9 +77,7 @@
 					<header>
 						<h2>Writing Songs and Recording Music</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Russell Sisson has been playing and writing music for most of his life. Here, you will find his recorded music over the years. The songs have all been written, performed and produced by Russell Sisson in his very unofficial home recording sessions using a single microphone and Audacity software.</p>
 				</div>
 				<a href="#work2" class="button style2 down anchored">Next</a>
 			</section>
