--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to <strong>Xerellian Press</strong>, presenting the writings and songs of <strong>Russell Sisson</strong><br />
-					released for free under license from Xerellian Press.</p>
+					<p>Welcome to <strong>Xerellian Press</strong>, presenting the writings and songs of <strong>Russell Sisson</strong>.<br />
+					Feel free to read or download his books in PDF format. Take a liaten to the songs he has written, played and recorded.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -47,7 +47,7 @@
 					<header>
 						<h2>Writing Stories</h2>
 					</header>
-					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i> begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story based on science and science fiction, introducing the character Xe who lives on a planet called Xeron in a far away galaxy. His fourth book, <i>Imagine Waking Up</i> is a compilation of stories based on the music written and performed by Russell Sisson.</p>
+					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i> begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story that explains the basics of science as experienced from the perspective of an alien visitor to Earth. The first book introduces the character Xe who comes from a planet called Xeron in a far away galaxy. The other two books in the trilogy explore Xe's eventual return to Xeron. His fourth book, <i>Imagine Waking Up</i> is a compilation of stories based on the music written and performed by Russell Sisson.</p>
 				</div>
 			</section>
       
@@ -77,7 +77,7 @@
 					<header>
 						<h2>Writing Songs and Recording Music</h2>
 					</header>
-					<p>Russell Sisson has been playing and writing music for most of his life. Here, you will find his recorded music over the years. The songs have all been written, performed and produced by Russell Sisson in his very unofficial home recording sessions using a single microphone and Audacity software.</p>
+					<p>Russell Sisson has been playing and writing music for most of his life. Here, you will find his recorded music over the years, starting in 2015. The songs have all been written, performed and produced by Russell Sisson.</p>
 				</div>
 				<a href="#work2" class="button style2 down anchored">Next</a>
 			</section>
@@ -87,9 +87,7 @@
 				<div class="content">
 					<header>
 						<h2>Discography</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Russell Sisson started to record his music on 2015 and has tried to produce new music every year since. The recordings are very simply produced using a Yeti microphone and the recording software Audacity to capture his accoustic Martin guitar, vocals, harmonies and some special effect instruments.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -118,41 +116,17 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>If you have questions or would like to send me your comments, please address them to russsivsp@gmail.com</p>
 					</header>
-					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
 				</div>
 			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
-
-				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-					</ul>
-
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Running Rabbit Website</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 			</footer>
 
 		<!-- Scripts -->
