--- a/music_2016.html
+++ b/music_2016.html
@@ -97,7 +97,7 @@
     <footer id="footer">
       <!-- Menu -->
       <ul class="menu">
-        <li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+        <li>&copy; Running Rabbit Website</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
       </ul>
     </footer>
 
