--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</section>
       
 		<!-- Writing -->
-      <section id="one" class="main style3 primary">      
+      <section id="one-2" class="main style3 primary">      
 				
         <!-- Gallery  -->
         <div class="gallery">
