--- a/music_2020.html
+++ b/music_2020.html
@@ -50,7 +50,7 @@
             </td>
           </tr>
           <tr>
-            <td>Ellie May</td>
+            <td>Ellie Mae</td>
             <td><audio controls>
                   <source src="music/2020/ellie_may_cello.mp3" type="audio/mpeg">
                   Your browser does not support the audio tag.
