--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
           <article class="from-right">
             <a href="pdf/Imagine Waking Up.pdf" target=”_blank”><img src="images/imagine_waking_up.jpg" title="Imagine Waking Up" alt="" class="thumbnailBook"/></a>
           </article>
+          <article class="from-left">
+            <a href="pdf/The Ellie Mae.pdf" target=”_blank”><img src="images/the_ellie_mae.jpg" title="The Ellie Mae" alt="" class="thumbnailBook"/></a>
+          </article>
           <footer>
 						<a href="#two" class="button style3 down anchored">More</a>
 					</footer>
