--- a/index.html
+++ b/index.html
@@ -56,24 +56,33 @@
 			</section>
       
 		<!-- Writing -->
-      <section id="one-2" class="main style3 primary">      
-				
+      <section id="one-2" class="main style3 primary main dark">      
         <!-- Gallery  -->
         <div class="gallery">
           <article class="from-left">
+            <p><a href="pdf/Of Universe and Ancestors.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/Of Universe and Ancestors.pdf" target=”_blank”><img src="images/of_universe_and_ancestors.jpg" title="Of Universe and Ancestors" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/Universe-Ancestors-Transformation-Xe-Xeron/dp/1973440776/ref=sr_1_2?dchild=1&keywords=russell+sisson&qid=1619455038&s=books&sr=1-2" target=”_blank”>Buy Book</a></p>
           </article>
           <article class="from-right">
+            <p><a href="pdf/Journey To Goldilocks.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/Journey To Goldilocks.pdf" target=”_blank”><img src="images/journey_to_goldilocks.jpg" title="Journey To Goldilocks" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/Journey-Goldilocks-Finding-Xeron-Xe/dp/1983054402/ref=sr_1_3?dchild=1&keywords=russell+sisson&qid=1619455451&s=books&sr=1-3" target=”_blank”>Buy Book</a></p>
           </article>
           <article class="from-left">
+            <p><a href="pdf/On The Origin of Xe.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/On The Origin of Xe.pdf" target=”_blank”><img src="images/on_the_origin_of_xe.jpg" title="On The Origin of Xe" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/Origin-Xe-Singularity-Xeron-Trilogy/dp/1091161011/ref=sr_1_12?keywords=russell+sisson&qid=1619455451&s=books&sr=1-12" target=”_blank”>Buy Book</a></p>
           </article>
           <article class="from-right">
+            <p><a href="pdf/Imagine Waking Up.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/Imagine Waking Up.pdf" target=”_blank”><img src="images/imagine_waking_up.jpg" title="Imagine Waking Up" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/Imagine-Waking-Up-Russell-Sisson/dp/B086Y7R7WH/ref=sr_1_7?dchild=1&keywords=russell+sisson&qid=1619455541&s=books&sr=1-7" target=”_blank”>Buy Book</a></p>
           </article>
           <article class="from-left">
+            <p><a href="pdf/The Ellie Mae.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/The Ellie Mae.pdf" target=”_blank”><img src="images/the_ellie_mae.jpg" title="The Ellie Mae" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/Ellie-Mae-Russell-Sisson/dp/B093CHKZX1/ref=sr_1_6?keywords=russell+sisson&qid=1619455541&s=books&sr=1-6" target=”_blank”>Buy Book</a></p>
           </article>
           <footer>
 						<a href="#two" class="button style3 down anchored">More</a>
