--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<h2>Hey.</h2>
 					</header>
 					<p>Welcome to <strong>Xerellian Press</strong>, presenting the writings and songs of <strong>Russell Sisson</strong>.<br />
-					Feel free to read or download his books in PDF format. Take a liaten to the songs he has written, played and recorded.</p>
+					Feel free to read or download his books in PDF format. Take a listen to the songs he has written, played and recorded.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -47,7 +47,7 @@
 					<header>
 						<h2>Writing Stories</h2>
 					</header>
-					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i> begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story that explains the basics of science as experienced from the perspective of an alien visitor to Earth. The first book introduces the character Xe who comes from a planet called Xeron in a far away galaxy. The other two books in the trilogy explore Xe's eventual return to Xeron. His fourth book, <i>Imagine Waking Up</i> is a compilation of stories based on the music written and performed by Russell Sisson. His fifth book, <i>The Ellie Mae</i> tells the story of a college graduate student named Allys who travels to Canyon de Chelly in northeastern Arizona to do some summer work at an archaeology site. While there, she discovers evidence of a small group of Basketmaker people who lived two thousand years ago. Allys begins a journey that takes her back to the time of the Basketmakers while uncovering the burial cist of an Ancestral Puebloan shaman.</p>
+					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i>, begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story that explains the basics of science as experienced from the perspective of an alien visitor to Earth. The first book introduces the character Xe who comes from a planet called Xeron in a far away galaxy. The other two books in the trilogy explore Xe's eventual return to Xeron. His fourth book, <i>Imagine Waking Up</i>, is a compilation of stories based on the music written and performed by Russell Sisson. His fifth book, <i>The Ellie Mae</i>, tells the story of a college graduate student named Allys who travels to Canyon de Chelly in northeastern Arizona to do some summer work at an archaeology site. While there, she discovers evidence of a small group of Basketmaker people who lived two thousand years ago. Allys begins a journey that takes her back to the time of the Basketmakers while uncovering the burial cist of an Ancestral Puebloan shaman.</p>
           <footer>
 						<a href="#one-2" class="button style3 down anchored">More</a>
 					</footer>
@@ -106,7 +106,7 @@
 				<div class="content">
 					<header>
 						<h2>Discography</h2>
-						<p>Russell Sisson started to record his music on 2015 and has tried to produce new music every year since. The recordings are very simply produced using a Yeti microphone and the recording software Audacity to capture his accoustic Martin guitar, vocals, harmonies and some special effect instruments.</p>
+						<p>Russell Sisson started to record his music in 2015 and has tried to produce new music every year since. The recordings are very simply produced using a Yeti microphone and the recording software Audacity to capture his accoustic Martin guitar, vocals, harmonies and some special effect instruments.</p>
 					</header>
 
 					<!-- Gallery  -->
