--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 					</header>
 					<p>Russell Sisson has been playing and writing music for most of his life. Here, you will find his recorded music over the years, starting in 2015. The songs have all been written, performed and produced by Russell Sisson.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#music" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Music -->
-			<section id="work" class="main style3 primary">
+			<section id="music" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Discography</h2>
