--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
 							<article class="from-left">
 								<a href="music_2020.html"><img src="images/music_2020.jpg" title="Russell 2020" alt="" class="thumbnailMusic"/></a>
 							</article>
+							<article class="from-right">
+								<a href="music_2021.html"><img src="images/music_2021.jpg" title="Russell 2021" alt="" class="thumbnailMusic"/></a>
+							</article>
 						</div>
 				</div>
 			</section>
