--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 							<article class="from-right">
 								<a href="music_2021.html"><img src="images/music_2021.jpg" title="Russell 2021" alt="" class="thumbnailMusic"/></a>
 							</article>
+							<article class="from-left">
+								<a href="music_2022.html"><img src="images/music_2022.jpg" title="Russell 2022" alt="" class="thumbnailMusic"/></a>
+							</article>
 						</div>
 				</div>
 			</section>
