--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<header>
 						<h2>Writing Stories</h2>
 					</header>
-					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i>, begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story that explains the basics of science as experienced from the perspective of an alien visitor to Earth. The first book introduces the character Xe who comes from a planet called Xeron in a far away galaxy. The other two books in the trilogy explore Xe's eventual return to Xeron. His fourth book, <i>Imagine Waking Up</i>, is a compilation of stories based on the music written and performed by Russell Sisson. His fifth book, <i>The Ellie Mae</i>, tells the story of a college graduate student named Allys who travels to Canyon de Chelly in northeastern Arizona to do some summer work at an archaeology site. While there, she discovers evidence of a small group of Basketmaker people who lived two thousand years ago. Allys begins a journey that takes her back to the time of the Basketmakers while uncovering the burial cist of an Ancestral Puebloan shaman.</p>
+					<p>Russell Sisson began writing books in 2017. His first book, <i>Of Universe and Ancestors</i>, begins a trilogy, followed by <i>Journey to Goldilocks</i> and ending with <i>On The Origin of Xe</i>. It is a story that explains the basics of science as experienced from the perspective of an alien visitor to Earth. The first book introduces the character Xe who comes from a planet called Xeron in a far away galaxy. The other two books in the trilogy explore Xe's eventual return to Xeron. His fourth book, <i>Imagine Waking Up</i>, is a compilation of stories based on the music written and performed by Russell Sisson. His fifth book, <i>The Ellie Mae</i>, tells the story of a college graduate student named Allys who begins an archaeological journey that takes her back to the time of the Basketmakers two thousand years ago. There, she uncovers the burial cist of an Ancestral Puebloan shaman. His sixth book, <i>Finding Rita's Way</i>, is a story of a young woman confronted by the loss of her religion and a political system that has abandoned her need for medical attention.</p>
           <footer>
 						<a href="#one-2" class="button style3 down anchored">More</a>
 					</footer>
@@ -83,6 +83,11 @@
             <p><a href="pdf/The Ellie Mae.pdf" target=”_blank”>Read for Free</a></p>
             <a href="pdf/The Ellie Mae.pdf" target=”_blank”><img src="images/the_ellie_mae.jpg" title="The Ellie Mae" alt="" class="thumbnailBook"/></a>
             <p><a href="https://www.amazon.com/Ellie-Mae-Russell-Sisson/dp/B093CHKZX1/ref=sr_1_6?keywords=russell+sisson&qid=1619455541&s=books&sr=1-6" target=”_blank”>Buy Book</a></p>
+          </article>
+          <article class="from-right">
+            <p><a href="pdf/Finding Rita's Way Print.pdf" target=”_blank”>Read for Free</a></p>
+            <a href="pdf/Finding Rita's Way Print.pdf" target=”_blank”><img src="images/finding_rita's_way.jpg" title="Finding Rita's Way" alt="" class="thumbnailBook"/></a>
+            <p><a href="https://www.amazon.com/dp/B0BYGWP89H?ref_=pe_3052080_397514860" target=”_blank”>Buy Book</a></p>
           </article>
           <footer>
 						<a href="#two" class="button style3 down anchored">More</a>
