--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 					</header>
 					<p>Welcome to <strong>Xerellian Press</strong>, presenting the writings and songs of <strong>Russell Sisson</strong>.<br />
 					Feel free to read or download his books in PDF format. Take a listen to the songs he has written, played and recorded.</p>
-					<footer>
+
+            <a href="https://www.saal-digital.net/profiles/RunningRabbitPhotography/#/" target=”_blank”>*** Take a look at Russell's photography. Purchase images and create your own art work.</a>
+
+          
+          <footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
 				</div>
