--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 							<article class="from-left">
 								<a href="music_2022.html"><img src="images/music_2022.jpg" title="Russell 2022" alt="" class="thumbnailMusic"/></a>
 							</article>
+							<article class="from-right">
+								<a href="music_2023.html"><img src="images/music_2023.jpg" title="Russell 2023" alt="" class="thumbnailMusic"/></a>
+							</article>
 						</div>
 				</div>
 			</section>
